--- a/register.html
+++ b/register.html
@@ -8,20 +8,17 @@
 </head>
 <body class="body">
   <div id="form" class="container">
-
     <h3>Register</h3>
-    <input type="text" placeholder="Username" id="username" class="input">
-    <input type="password" placeholder="Password" id="password" class="input">
-    <input type="password" placeholder="Confirm Password" id="confirmPassword" class="input">
-    <input type="submit" class="submit">
-    <p>Sudah punya akun? <a href="menulogin.html">Login here</a></p>
-    
+    <input type="text" placeholder="Username" id="username" class="input" required>
+    <input type="password" placeholder="Password" id="password" class="input" required>
+    <input type="password" placeholder="Confirm Password" id="confirmPassword" class="input" required>
+    <button type="submit" class="submit">Register</button>
+    <p>Sudah punya akun? <a href="login.html">Login here</a></p>
   </div>
-
   <script src="script.js"></script>
   <script>
-    document.querySelector('.submit').addEventListener('click', register);
-    async function register() {
+    document.querySelector('.submit').addEventListener('click', async function(ev) {
+      ev.preventDefault();
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
@@ -29,22 +26,11 @@
         alert('Password tidak sama');
         return;
       }
-      const response = await fetch('http://localhost:3000/register', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ username, pasword : password })
-      });
-      const data = await response.json();
-      console.log(data)
-      if (response.status == 201) {
-        alert('Register berhasil');
-        window.location.href = 'menulogin.html';
-      } else {
-        alert('Register gagal');
+      const response = await register(username, password);
+      if (response) {
+        window.location.href = 'login.html';
       }
-    }
+    });
   </script>
 </body>
 </html>
